Intégration de git bisect dans le workflow GitHub Actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,10 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      badhash: "1d8748281263e8e7efe7b85c828cd3f600d96bfc"
+      goodhash: "e4cfc6f77ebbe2e23550ddab682316ab4ce1c03c"
+
     steps:
       - uses: actions/checkout@v3
         with:
@@ -18,5 +22,5 @@ jobs:
       - name: Install packages
         run: pip install -r requirements.txt
 
-      - name: Run tests
-        run: python manage.py test
+      - name: Run git bisect script
+        run: python myscript.py
